# libobs-rs

./: Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: build-docs.yml  copilot-setup-steps.yml  publish.yml  validation.yml
cargo-obs-build/: BUILD_SCRIPT_EXAMPLE.md  Cargo.toml  README.md
cargo-obs-build/mock_responses/: README.md  obs_studio_release.json  obs_studio_release_latest.json
cargo-obs-build/src/: args.rs  git.rs  install_obs_ubuntu.sh  lib.rs  main.rs  ubuntu_install.rs
examples/download-at-runtime/: Cargo.toml
examples/download-at-runtime/src/: main.rs
examples/linux-pipewire-capture/: Cargo.toml
examples/linux-pipewire-capture/src/: linux.rs
examples/monitor-capture/: Cargo.toml
examples/monitor-capture/src/: main.rs
examples/obs-flow/: Cargo.toml
examples/obs-flow/src/: windows.rs
examples/obs-preview/: Cargo.toml
examples/obs-preview/src/: main.rs
libobs/: Cargo.toml  build.rs
libobs-bootstrapper/: Cargo.toml  README.md  build.rs
libobs-bootstrapper/mock_responses/: README.md  libobs_builds_release.json
libobs-bootstrapper/src/: download.rs  error.rs  extract.rs  lib.rs  status_handler.rs  version.rs
libobs-bootstrapper/tests/: test_bootstrap.rs
libobs-simple/: Cargo.toml
libobs-simple-macro/: Cargo.toml  README.md
libobs-simple-macro/src/: lib.rs
libobs-simple/src/: error.rs  lib.rs
libobs-simple/src/output/: simple.rs
libobs-simple/src/sources/: macro_helper.rs  mod.rs
libobs-simple/src/sources/linux/sources/: alsa_input.rs  jack_input.rs  linux_general_screen_capture.rs  linux_general_window_capture.rs  pipewire_capture.rs  pulse_input.rs  v4l2_input.rs  x11_capture.rs  xcomposite_input.rs
libobs-simple/src/sources/windows/sources/: game_capture.rs  mod.rs  monitor_capture.rs  window_capture.rs
libobs-simple/tests/: gpu_encoder_test_switch.rs  gpu_integration_preview_test.rs  gpu_leak_test_output_with_encoders.rs  gpu_leak_test_recording.rs  gpu_leak_test_scene.rs  gpu_leak_test_source.rs  gpu_sources_test_game_capture.rs  gpu_sources_test_monitor_capture.rs  gpu_sources_test_window_capture.rs  integration_test_data.rs
libobs-simple/tests/common/: initialize.rs  mod.rs
libobs-sources/src/: lib.rs
libobs-sources/src/linux/sources/: jack_input.rs  linux_general_screen_capture.rs  linux_general_window_capture.rs  pipewire_capture.rs  pulse_input.rs  v4l2_input.rs
libobs-sources/tests/: gpu_integration_preview_test.rs
libobs-sources/tests/common/: initialize.rs  mod.rs
libobs-sources/tests/windows/: test_monitor_capture.rs
libobs-window-helper/: Cargo.toml  README.md
libobs-window-helper/src/: error.rs  lib.rs  monitor.rs  window.rs
libobs-window-helper/src/util/: helper.rs  win_iterator.rs
libobs-wrapper/: Cargo.toml  README.md
libobs-wrapper/src/: context.rs  enums.rs  lib.rs  macros.rs  runtime.rs  signals.rs
libobs-wrapper/src/crash_handler/: mod.rs
libobs-wrapper/src/data/: immutable.rs  mod.rs  traits.rs  updater.rs  video.rs
libobs-wrapper/src/data/output/: mod.rs  replay_buffer.rs
libobs-wrapper/src/data/properties/: macros.rs  mod.rs
libobs-wrapper/src/data/properties/types/: number.rs
libobs-wrapper/src/display/: creation_data.rs  mod.rs
libobs-wrapper/src/display/window_manager/windows/: mod.rs
libobs-wrapper/src/encoders/: mod.rs
libobs-wrapper/src/logger/: file.rs
libobs-wrapper/src/scenes/: mod.rs  transform_info.rs
libobs-wrapper/src/sources/: mod.rs
libobs-wrapper/src/utils/: error.rs  mod.rs  modules.rs  path.rs
libobs-wrapper/src/utils/info/: startup.rs
libobs-wrapper/src/utils/initialization/: other.rs  windows.rs
libobs-wrapper/src/utils/linux/: mod.rs
libobs-wrapper/src/utils/traits/: mod.rs
libobs/headers/: wrapper.h
libobs/scripts/: update_headers.ps1
libobs/src/: bindings_win.rs
scripts/: check-crate-dirty.ps1  run-check.ps1  tag-changed-crates.ps1
scripts/test_assets/test_bootstrapping/: Cargo.toml
scripts/test_assets/test_bootstrapping/src/: main.rs
scripts/test_assets/test_cargo_obs_build/: Cargo.toml  build.rs
src/wrapper/sources/: mod.rs
src/wrapper/sources/windows/: mod.rs  window_capture.rs
