[workspace]
resolver = "2"
members = [
    "cargo-obs-build",
    "libobs",
    "libobs-simple-macro",
    "libobs-simple",
    "libobs-window-helper",
    "libobs-wrapper",
    "libobs-bootstrapper",
    "examples/*"
]
exclude = ["scripts/test_assets/test_cargo_obs_build", "scripts/test_assets/test_bootstrapping"]

[workspace.dependencies]
libobs = { path = "./libobs", version = "4.0.2" }
libobs-wrapper = { path = "./libobs-wrapper", version = "7.0.0", default-features = false }
libobs-simple-macro = { path = "./libobs-simple-macro", version = "6.0.1" }
libobs-simple = { path = "./libobs-simple", version = "6.0.0" }
libobs-window-helper = { path = "./libobs-window-helper", version = "0.3.0" }
libobs-bootstrapper = { path = "./libobs-bootstrapper", version = "0.2.5" }


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
