[workspace]
resolver = "2"
members = [
    "cargo-obs-build",
    "libobs",
    "libobs-simple-macro",
    "libobs-simple",
    "libobs-window-helper",
    "libobs-wrapper",
    "libobs-bootstrapper",
    "examples/*"
]
exclude = ["scripts/test_assets/test_cargo_obs_build", "scripts/test_assets/test_bootstrapping"]

[workspace.dependencies]
# Workspace members
libobs = { path = "./libobs", version = "4" }
libobs-wrapper = { path = "./libobs-wrapper", version = "7", default-features = false }
libobs-simple-macro = { path = "./libobs-simple-macro", version = "6" }
libobs-simple = { path = "./libobs-simple", version = "6" }
libobs-window-helper = { path = "./libobs-window-helper", version = "0.3" }
libobs-bootstrapper = { path = "./libobs-bootstrapper", version = "0.2" }

# Error handling, logging, utilities
anyhow = "1"
chrono = "0.4"
colored = "3"
env_logger = "0.11"
hex = "0.4"
indicatif = "0.18"
lazy_static = "1"
log = "0.4"
paste = "1"
vsprintf = "2"

# Serialization and parsing
serde = "1"
serde_json = "1"

# Async, networking, crypto
tokio = { version = "1", default-features = false }
reqwest = "0.12"
sha2 = "0.10"

# Platform/FFI/windowing
display-info = "0.5"
libloading = "0.9"
num-derive = "0.4"
num-traits = "0.2"
winit = "0.30"
windows = "0.62"


[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
