[package]
name = "libobs-bootstrapper"
version = "0.2.6"
build = "build.rs"
description = "Downloads OBS binaries at runtime and bootstraps libobs"
readme = "./README.md"
repository = "https://github.com/libobs-rs/libobs-rs"
documentation = "https://libobs-rs.github.io/libobs-rs/libobs_bootstrapper/"
authors = ["Hendrik Lind <hendrik@sshcrack.me>"]
edition = "2024"
categories = [
    "multimedia::video",
    "multimedia::audio",
    "multimedia",
    "multimedia::encoding",
]
keywords = ["obs", "libobs", "video", "bootstrapper"]
license = "GPL-3.0"


[dependencies]
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
hex = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true, features = ["process", "macros"], default-features = false }
libobs = { workspace = true }
semver = "1"
sevenz-rust = "0.6"
sha2 = { workspace = true }
uuid = { version = "1", features = ["v4"] }
reqwest = { workspace = true, features = ["stream", "json"] }
serde = { workspace = true, features = ["derive"] }
libloading = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true, optional = true }

[features]
default = ["install_dummy_dll"]
generate_bindings = ["libobs/generate_bindings"]
install_dummy_dll = []
__ci = []
__mock_github_responses = ["dep:serde_json"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

[lints]
workspace = true