[package]
name = "libobs-simple-macro"
description = "Helper macro for libobs-simple"
repository = "https://github.com/libobs-rs/libobs-rs"
documentation = "https://sshcrack.github.io/libobs-docs/libobs_simple_macro/"
readme = "README.md"
authors = ["Hendrik Lind <hendrik@sshcrack.me>"]
categories = ["multimedia::video", "multimedia::audio", "multimedia", "multimedia::encoding"]
keywords = ["obs", "libobs", "video", "recording", "screen-recording"]
license = "GPL-3.0"
version = "6.0.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = {version="2.0.72", features=["full"]}

[lib]
name = "libobs_simple_macro"
path = "src/lib.rs"
proc-macro = true

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

[lints]
workspace = true