[package]
name = "libobs-simple"
description = "A simple and easy-to-use Rust wrapper around libobs-wrapper for recording and streaming."
version = "6.0.3+32.0.2"
repository = "https://github.com/libobs-rs/libobs-rs"
documentation = "https://libobs-rs.github.io/libobs-rs/libobs_simple/"
readme = "README.md"
authors = ["Hendrik Lind <hendrik@sshcrack.me>"]
categories = [
    "multimedia::video",
    "multimedia::audio",
    "multimedia",
    "multimedia::encoding",
]
keywords = ["obs", "libobs", "video", "recording", "screen-recording"]
license = "GPL-3.0"
edition = "2021"

[dependencies]
libobs = { workspace = true }
libobs-wrapper = { workspace = true }
libobs-simple-macro = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
log = { workspace = true }

display-info = { workspace = true }
libobs-window-helper = { workspace = true, optional = true }
paste = { workspace = true }

[features]
default = ["window-list", "enable_runtime"]
generate_bindings = ["libobs/generate_bindings", "libobs-wrapper/generate_bindings"]
window-list = ["dep:libobs-window-helper"]
enable_runtime = ["libobs-wrapper/enable_runtime"]
__test_environment = ["libobs-wrapper/__test_environment"]

[dev-dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
libobs-wrapper = { workspace = true, features = ["__test_environment"], default-features = false}
winit = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
ffmpeg-sidecar = "2"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

[lints]
workspace = true
