[package]
name = "libobs"
version = "4.0.2+32.0.2"
description = "LibOBS bindings for Rust"
repository = "https://github.com/libobs-rs/libobs-rs"
documentation = "https://libobs-rs.github.io/libobs-docs/libobs/"
readme = "./README.md"
authors = ["Joshua Park <joshprk@proton.me>", "Hendrik Lind <hendrik@sshcrack.me>"]
categories = [
    "multimedia::video",
    "multimedia::audio",
    "multimedia",
    "multimedia::encoding",
]
keywords = ["obs", "libobs", "video", "recording", "screen-recording"]
license = "GPL-3.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3"


[features]
default = []
generate_bindings = []
include_win_bindings = ["generate_bindings"]

[dev-dependencies]
vsprintf = "2.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

[lints]
workspace = true
