[package]
name = "download-at-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
indicatif = { workspace = true }
libobs-bootstrapper = { workspace = true }
libobs-wrapper = { workspace = true }
tokio = { workspace = true, features = ["full"] }
