[package]
name = "test_build_script"
version = "0.1.0"
edition = "2024"

[dependencies]
libobs = { path = "../../../libobs" }

[build-dependencies]
cargo-obs-build = { path = "../../../cargo-obs-build", features = ["__mock_github_responses"] }

[package.metadata]
libobs-cache-dir = "../../../obs-build"